# IdleGame

./: CMakeLists.txt  main.cpp
data/: biome_data.txt  biomes.txt  effects.txt  loot_tables.txt  progressions.txt  resources.txt  treasures.txt
include/core/: GameEngine.hpp  Player.hpp  StatManager.hpp
include/managers/: BiomeManager.hpp  DataParser.hpp  FacilityManager.hpp  ResearchManager.hpp  ShopManager.hpp
include/ui/: ConsoleUtils.hpp  MenuRender.hpp
src/core/: ActiveEffect.cpp  ActiveEffect.h  BaseStats.cpp  BaseStats.h  ConstructionTask.cpp  ConstructionTask.h  FishResult.cpp  FishResult.h  GameEngine.cpp  Inventory.cpp  Inventory.h  InventoryEntry.cpp  InventoryEntry.h  ModifierStats.cpp  ModifierStats.h  Player.cpp  Player.h  ResearchTask.cpp  ResearchTask.h  StatManager.cpp  StatSnapshot.cpp  StatSnapshot.h
src/data/database/: GameDatabase.cpp  GameDatabase.h
src/data/loaders/: BiomeLoader.cpp  BiomeLoader.h  ProgressionLoader.cpp  ProgressionLoader.h
src/data/models/: BiomeDefinition.cpp  BiomeDefinition.h  BiomeDrop.cpp  BiomeDrop.h  BiomeEntryDefinition.cpp  BiomeEntryDefinition.h  EffectDefinition.cpp  EffectDefinition.h  LootEntryDefinition.cpp  LootEntryDefinition.h  (+24 more)
src/managers/: BiomeManager.cpp  DataParser.cpp  FacilityManager.cpp  ResearchManager.cpp  ShopManager.cpp
src/simulation/: GameLoop.cpp  GameLoop.h  TimeManager.cpp  TimeManager.h
src/systems/: FishSystem.cpp  FishSystem.h  StatSystem.cpp  StatSystem.h
src/ui/: ConsoleUtils.cpp  MenuRender.cpp
src/utils/: Random.cpp  Random.h  StringUtils.cpp  StringUtils.h
(+2 files in other folders)
